--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Веб Студія</title>
   </head>
   <body>
+    <!-- Хедер -->
     <header>
       <!-- Логотип -->
       <a href="/">WebStudio</a>
@@ -24,69 +25,135 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <!-- Блок хиро -->
-    <section>
-      <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button type="button">Замовити послугу</button>
-    </section>
-    <!-- Список ефективних рішень для вашого бізнесу -->
-    <section>
-      <!-- Заголовок, якого немає в макеті, але логічно його тут поставити та потім прибрати в CSS-->
-      <h2>Список ефективних рішень для вашого бізнесу</h2>
-      <ul>
-        <li>
-          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
-          </p>
-        </li>
-        <li>
-          <h3>ПУНКТУАЛЬНІСТЬ</h3>
-          <p>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
-          </p>
-        </li>
-        <li>
-          <h3>ПЛАНУВАННЯ</h3>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </li>
-        <li>
-          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <!-- Список послуг -->
-    <section>
-      <h2>Чим ми займаємося</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/img1.jpg"
-            alt="Робочий стіл, на якому знаходяться: два монітори, 
+    <!-- Мейн контент -->
+    <main>
+      <!-- Блок хиро -->
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <!-- Список ефективних рішень для вашого бізнесу -->
+      <section>
+        <!-- Заголовок, якого немає в макеті, але логічно його тут поставити та потім прибрати в CSS-->
+        <h2>Список ефективних рішень для вашого бізнесу</h2>
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Список послуг -->
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="Робочий стіл, на якому знаходяться: два монітори, 
             клавіатура, окуляри, записник з ручкою, компьютерна мишка та листок"
-            width="370"
-            height="294"
-          />
-        </li>
-        <li><img src="./images/img2.jpg" alt="Дівчина працює за ноутбуком" width="370" height="294"></li>
-        <li><img src="./images/img3.jpg" alt="Планшет"></li>
-      </ul>
-    </section>
-    <!-- Наша команда -->
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </section>
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="Дівчина працює за ноутбуком"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li><img src="./images/img3.jpg" alt="Планшет" /></li>
+        </ul>
+      </section>
+      <!-- Наша команда -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/imgteam1.jpg"
+              alt="Ігор Дем'яненко"
+              width="270"
+              height="260"
+            />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/imgteam2.jpg"
+              alt="Ольга Рєпіна"
+              width="270"
+              height="260"
+            />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/imgteam3.jpg"
+              alt="Микола Тарасов"
+              width="270"
+              height="260"
+            />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/imgteam4.jpg"
+              alt="Михайло Єрмаков"
+              width="270"
+              height="260"
+            />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- Футер -->
+    <footer>
+      <a href="/">WebStudio</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/8ZF42JuxDTGgMg426"
+              target="_blank"
+              rel="noopener-nofollow-noreferrer"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
